<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cw-project-baseline</groupId>
    <artifactId>cw-project-baseline-activiti</artifactId>
    <version>0.0.1</version>

    <properties>
        <spring-boot-version>2.1.1.RELEASE</spring-boot-version>
        <spring-dependency-version>5.1.3.RELEASE</spring-dependency-version>
        <activiti.version>7.0.0.Beta5</activiti.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.4.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>LATEST</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${spring-boot-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-rest</artifactId>
            <version>${spring-boot-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring-boot-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
            <version>${spring-boot-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
            <version>${spring-boot-version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
            <version>${spring-boot-version}</version>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
            <version>3.0.4.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <version>${spring-boot-version}</version>
        </dependency>

        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>LATEST</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-data-rest</artifactId>
            <version>LATEST</version>
        </dependency>

        <!--
                <dependency>
                    <groupId>org.activiti</groupId>
                    <artifactId>activiti-spring-boot-starter-basic</artifactId>
                    <version>${activiti.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.activiti</groupId>
                    <artifactId>activiti-spring-boot-starter-rest-api</artifactId>
                    <version>${activiti.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.activiti</groupId>
                    <artifactId>activiti-spring-boot-starter-integration</artifactId>
                    <version>${activiti.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.activiti</groupId>
                    <artifactId>activiti-spring-boot-starter-actuator</artifactId>
                    <version>${activiti.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.activiti</groupId>
                    <artifactId>activiti-spring-boot-starter-security</artifactId>
                    <version>${activiti.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.activiti</groupId>
                    <artifactId>activiti-spring-boot-starter-jpa</artifactId>
                    <version>${activiti.version}</version>
                </dependency>

                <dependency>
                    <groupId>org.activiti</groupId>
                    <artifactId>activiti-spring-boot-samples</artifactId>
                    <version>${activiti.version}</version>
                    <scope>test</scope>
                    <type>pom</type>
                </dependency>
        -->
        <dependency>
            <groupId>org.activiti</groupId>
            <artifactId>activiti-spring-boot-starter</artifactId>
            <version>7.0.0.Beta5</version>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmArguments>
                        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8900
                        -XX:+UnlockDiagnosticVMOptions
                        -XX:MaxHeapFreeRatio=40
                        -XX:-UseGCOverheadLimit
                        -XX:LargePageSizeInBytes=128m
                        -XX:+UseLWPSynchronization
                        -XX:MinHeapFreeRatio=15
                        -XX:CompileThreshold=3000
                        -XX:+UseStringDeduplication
                        -XX:+AggressiveOpts
                        -XX:+UseG1GC
                        -XX:+UseLargePages
                        -XX:MaxMetaspaceSize=192m
                        -XX:+OptimizeStringConcat
                        -XX:-UseBiasedLocking
                        -Xms2048m
                        -Xmx2048m
                        -server
                    </jvmArguments>
                    <fork>false</fork>
                </configuration>
                <version>2.1.1.RELEASE</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>10</source>
                    <target>10</target>
                </configuration>
                <version>3.7.0</version>
            </plugin>
        </plugins>
    </build>
</project>